k8s-dev/comment-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  namespace: bookreview-dev
  name: comment
spec:
  selector:
    app: comment
  replicas: 1
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: container
          image: ${IMAGE_NAME}:${VERSION}
          ports:
            - containerPort: ${APP_PORT}
              protocol: TCP
      imagePullSecrets:
        - name: gitlabregcred
  strategy:
    type: Rolling
    rollingParams:
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
  triggers:
    - type: ConfigChange
  paused: false
