k8s-dev/comment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-svc
  namespace: bookreview-dev
spec:
  type: NodePort
  selector:
    app: comment
  ports:
    - protocol: TCP
      port: ${APP_PORT}
