k8s-dev/comment-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookcomment-dev
  namespace: bookreview-dev
spec:
  path: /
  to:
    name: comment-svc
    weight: 100
    kind: Service
  port:
    targetPort: 8081
  host: bookcomment-dev-bookreview.apps-crc.testing
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFFzCCA3+gAwIBAgIQAwcshWQKnVyhlqdfcexqLzANBgkqhkiG9w0BAQsFADCB
[...]
      OJkSXv3EEjqUPgk=
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIElzCCAv+gAwIBAgIRAPY6eHmYK1TMyGdjgSAsx4MwDQYJKoZIhvcNAQELBQAw
[...]
      jSEro7zh+xFcK2XCtM2WptjhjC4qhkK7HCUT
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDWPE0V2HIJFEVz
[...]
      FNunLHjSuAtTwxQCibzmegpN
      -----END PRIVATE KEY-----
    termination: edge
